--- a/Play That Note/Base.lproj/Main.storyboard
+++ b/Play That Note/Base.lproj/Main.storyboard
@@ -427,6 +427,7 @@
                                             </subviews>
                                             <constraints>
                                                 <constraint firstAttribute="trailingMargin" secondItem="smd-cQ-0nK" secondAttribute="trailing" id="Ix5-dT-FIz"/>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="GbH-xt-APm" secondAttribute="trailingMargin" id="Kem-ZB-nKo"/>
                                                 <constraint firstAttribute="leadingMargin" secondItem="GbH-xt-APm" secondAttribute="leading" id="Rxn-N3-aOt"/>
                                                 <constraint firstItem="GbH-xt-APm" firstAttribute="centerY" secondItem="uKZ-1R-05x" secondAttribute="centerY" id="Uih-pm-Nf2"/>
                                                 <constraint firstItem="smd-cQ-0nK" firstAttribute="top" secondItem="uKZ-1R-05x" secondAttribute="topMargin" id="wHj-e6-vP4"/>
@@ -579,6 +580,7 @@
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="PRi-vF-QOL" firstAttribute="centerY" secondItem="woG-md-E8n" secondAttribute="centerY" id="I20-l2-uGO"/>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="l73-Zn-jdF" secondAttribute="trailingMargin" id="UDU-ci-VMH"/>
                                                 <constraint firstItem="l73-Zn-jdF" firstAttribute="centerY" secondItem="woG-md-E8n" secondAttribute="centerY" id="gbQ-CU-nld"/>
                                                 <constraint firstAttribute="leadingMargin" secondItem="l73-Zn-jdF" secondAttribute="leading" constant="-26" id="ogi-3V-FCW"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="PRi-vF-QOL" secondAttribute="trailing" id="qMg-ww-E3B"/>
@@ -605,6 +607,7 @@
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="NOy-lx-LVJ" firstAttribute="centerY" secondItem="ZUQ-sw-xpX" secondAttribute="centerY" id="JgD-Fv-DJB"/>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="NOy-lx-LVJ" secondAttribute="trailingMargin" id="g3Q-O8-ZnN"/>
                                                 <constraint firstItem="NOy-lx-LVJ" firstAttribute="leading" secondItem="ZUQ-sw-xpX" secondAttribute="leadingMargin" constant="26" id="mxj-Ii-CS5"/>
                                             </constraints>
                                         </tableViewCellContentView>
@@ -653,6 +656,7 @@
                                             <constraints>
                                                 <constraint firstItem="kUE-1B-IWG" firstAttribute="centerY" secondItem="YQJ-DP-B3s" secondAttribute="centerY" id="39w-6O-dVH"/>
                                                 <constraint firstItem="kUE-1B-IWG" firstAttribute="leading" secondItem="YQJ-DP-B3s" secondAttribute="leadingMargin" constant="26" id="3R5-dq-yze"/>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="kUE-1B-IWG" secondAttribute="trailingMargin" id="RoI-nd-MwW"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
@@ -751,11 +755,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="SettingsTableViewCell" textLabel="qcU-ki-ULM" detailTextLabel="iHe-NB-wZA" style="IBUITableViewCellStyleSubtitle" id="Y6m-Ex-Xph">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="SettingsTableViewCell" textLabel="qcU-ki-ULM" detailTextLabel="iHe-NB-wZA" style="IBUITableViewCellStyleSubtitle" id="Y6m-Ex-Xph">
                                 <rect key="frame" x="0.0" y="28" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Y6m-Ex-Xph" id="pKz-RL-kT8">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="286" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="qcU-ki-ULM">
@@ -880,9 +884,9 @@
                                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sounds an octave and a perfect fifth lower than written" textAlignment="center" lineBreakMode="wordWrap" baselineAdjustment="none" minimumScaleFactor="0.29999999999999999" adjustsLetterSpacingToFitWidth="YES" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="PST-EU-A3T">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sounds an octave and a perfect fifth lower than written" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="none" minimumScaleFactor="0.29999999999999999" adjustsLetterSpacingToFitWidth="YES" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="PST-EU-A3T">
                                         <rect key="frame" x="0.0" y="0.0" width="304" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="17"/>
                                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
