--- a/Play That Note/Base.lproj/Main.storyboard
+++ b/Play That Note/Base.lproj/Main.storyboard
@@ -296,7 +296,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="StatsCell" textLabel="8aC-17-Hn7" detailTextLabel="kbi-sT-OYx" style="IBUITableViewCellStyleValue1" id="tCP-M3-IGx" customClass="ClefTableViewCell" customModule="Play_That_Note" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="StatsCell" textLabel="8aC-17-Hn7" detailTextLabel="kbi-sT-OYx" style="IBUITableViewCellStyleValue1" id="tCP-M3-IGx" customClass="ClefTableViewCell" customModule="Play_That_Note" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="tCP-M3-IGx" id="kEC-FE-j8e">
@@ -1143,25 +1143,51 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="E33-wb-5Gc">
-                                <rect key="frame" x="40" y="220" width="240" height="128"/>
-                                <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
-                            </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wNb-Uj-Jhp">
-                                <rect key="frame" x="111.5" y="161.5" width="98.5" height="50.5"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="42"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <visualEffectView opaque="NO" alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Z9q-JX-YQc">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="bty-yr-nud">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                </view>
+                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="calibratedWhite"/>
+                                <blurEffect style="prominent"/>
+                            </visualEffectView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="QxO-u8-jeN">
+                                <rect key="frame" x="53.5" y="199.5" width="213" height="169"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wNb-Uj-Jhp">
+                                        <rect key="frame" x="55" y="0.0" width="103" height="49"/>
+                                        <attributedString key="attributedText">
+                                            <fragment content="Label">
+                                                <attributes>
+                                                    <font key="NSFont" size="42" name=".SFNSDisplay"/>
+                                                </attributes>
+                                            </fragment>
+                                        </attributedString>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="E33-wb-5Gc">
+                                        <rect key="frame" x="0.0" y="49" width="213" height="120"/>
+                                        <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="E33-wb-5Gc" secondAttribute="height" multiplier="667:375" id="CNf-2J-aZQ"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" secondItem="wNb-Uj-Jhp" secondAttribute="height" id="HQw-Dq-Nfd"/>
+                                    <constraint firstItem="E33-wb-5Gc" firstAttribute="width" secondItem="QxO-u8-jeN" secondAttribute="width" id="Vdx-Iz-bLt"/>
+                                </constraints>
+                            </stackView>
                         </subviews>
                         <constraints>
-                            <constraint firstItem="E33-wb-5Gc" firstAttribute="centerX" secondItem="vEa-0L-5ql" secondAttribute="centerX" id="3rg-Zr-YLb"/>
-                            <constraint firstItem="E33-wb-5Gc" firstAttribute="centerY" secondItem="vEa-0L-5ql" secondAttribute="centerY" id="5Q7-cZ-ekJ"/>
-                            <constraint firstItem="E33-wb-5Gc" firstAttribute="width" secondItem="vEa-0L-5ql" secondAttribute="height" multiplier="30:71" id="LPs-Ou-PCv"/>
-                            <constraint firstItem="E33-wb-5Gc" firstAttribute="top" secondItem="wNb-Uj-Jhp" secondAttribute="bottom" constant="8" id="Ou7-jQ-BeQ"/>
-                            <constraint firstItem="E33-wb-5Gc" firstAttribute="top" secondItem="kKK-rh-nb9" secondAttribute="bottom" constant="200" id="c41-QN-QID"/>
-                            <constraint firstItem="wNb-Uj-Jhp" firstAttribute="centerX" secondItem="E33-wb-5Gc" secondAttribute="centerX" id="c7f-qu-ZzP"/>
+                            <constraint firstItem="QxO-u8-jeN" firstAttribute="centerX" secondItem="vEa-0L-5ql" secondAttribute="centerX" id="0v4-us-KT7"/>
+                            <constraint firstItem="Z9q-JX-YQc" firstAttribute="height" secondItem="vEa-0L-5ql" secondAttribute="height" id="3bN-QP-UYb"/>
+                            <constraint firstItem="Z9q-JX-YQc" firstAttribute="centerY" secondItem="vEa-0L-5ql" secondAttribute="centerY" id="A0g-MW-cr0"/>
+                            <constraint firstItem="QxO-u8-jeN" firstAttribute="centerY" secondItem="vEa-0L-5ql" secondAttribute="centerY" id="GvP-e7-GPX"/>
+                            <constraint firstItem="QxO-u8-jeN" firstAttribute="width" secondItem="vEa-0L-5ql" secondAttribute="width" multiplier="2/3" id="MSL-3c-MOb"/>
+                            <constraint firstItem="Z9q-JX-YQc" firstAttribute="centerX" secondItem="vEa-0L-5ql" secondAttribute="centerX" id="lC7-mM-skK"/>
+                            <constraint firstItem="Z9q-JX-YQc" firstAttribute="width" secondItem="vEa-0L-5ql" secondAttribute="width" id="v7l-yb-Lg8"/>
                         </constraints>
                     </view>
                     <connections>
@@ -1171,7 +1197,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qPf-61-WfA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1560" y="285"/>
+            <point key="canvasLocation" x="1558.125" y="284.15492957746477"/>
         </scene>
         <!--Flashcard View Controller-->
         <scene sceneID="0I1-1d-din">
@@ -1384,7 +1410,7 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="IdE-Xc-1ah"/>
-        <segue reference="5T1-51-Up9"/>
-        <segue reference="vYY-F5-TgL"/>
+        <segue reference="D9q-an-ZyC"/>
+        <segue reference="ccQ-76-FLv"/>
     </inferredMetricsTieBreakers>
 </document>
