--- a/Play That Note/vexFlow/css/main.css
+++ b/Play That Note/vexFlow/css/main.css
@@ -7,6 +7,7 @@
 body {
 /*    background-color: whitesmoke;*/
     background-image: url("../images/rough-beige-paper-texture.jpg");
+/*    background-color: clear;*/
     overflow: hidden;
     margin: 0;
 }
