--- a/Play That Note/Base.lproj/Main.storyboard
+++ b/Play That Note/Base.lproj/Main.storyboard
@@ -1155,12 +1155,13 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="QxO-u8-jeN">
                                 <rect key="frame" x="53.5" y="199.5" width="213" height="169"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wNb-Uj-Jhp">
-                                        <rect key="frame" x="55" y="0.0" width="103" height="49"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wNb-Uj-Jhp">
+                                        <rect key="frame" x="0.0" y="0.0" width="213" height="49"/>
                                         <attributedString key="attributedText">
                                             <fragment content="Label">
                                                 <attributes>
                                                     <font key="NSFont" size="42" name=".SFNSDisplay"/>
+                                                    <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="truncatingTail" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                                 </attributes>
                                             </fragment>
                                         </attributedString>
@@ -1177,6 +1178,7 @@
                                 <constraints>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" secondItem="wNb-Uj-Jhp" secondAttribute="height" id="HQw-Dq-Nfd"/>
                                     <constraint firstItem="E33-wb-5Gc" firstAttribute="width" secondItem="QxO-u8-jeN" secondAttribute="width" id="Vdx-Iz-bLt"/>
+                                    <constraint firstItem="wNb-Uj-Jhp" firstAttribute="width" secondItem="QxO-u8-jeN" secondAttribute="width" id="mpW-6F-x3T"/>
                                 </constraints>
                             </stackView>
                         </subviews>
